@@ -758,6 +758,7 @@
 <b>2.7.x</b><br>
 1) build_system: small rework DoConfigure.sh scripts.<br>
 2) dhcpv6: fix renewal of IA NA.<br>
+2) dhcpv6: close file descriptors on exec.<br>
 <br>
 <br>
 <b>TODO:</b><br>
